# Git2OKF

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  verification.md
.github/workflows/: test.yml
docs/: ROADMAP.md  phase3_design.md  work_done.md  wsl_setup.md
src/: lib.rs  main.rs
src/analyzer/: mod.rs  resolver.rs  symbol_table.rs  types.rs
src/cli/: args.rs  commands.rs
src/core/: config.rs  constants.rs  errors.rs  mod.rs  types.rs  validator.rs
src/detector/: dependency.rs  framework.rs  language.rs  mod.rs  version.rs
src/git/: clone.rs  metadata.rs  mod.rs  repository.rs
src/graph/: builder.rs  edge.rs  mod.rs  node.rs  types.rs
src/okf/: mod.rs
src/output/: formatter.rs  json.rs  mod.rs  yaml.rs
src/parser/: ast.rs  engine.rs  javascript_parser.rs  mod.rs  php_parser.rs  python_parser.rs  registry.rs  rust_parser.rs
tests/: cleanup_tests.rs  framework_tests.rs  graph_tests.rs  integration_tests.rs  language_tests.rs  metadata_tests.rs  parser_tests.rs  repository_tests.rs
