[package]
name = "git2okf"
version = "0.1.0"
edition = "2021"
description = "Convert any Git repository into structured AI-readable knowledge using Open Knowledge Format (OKF)"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
git2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
tempfile = "3.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.20"
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-php = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
tree-sitter-python = { version = "0.20", optional = true }

[features]
default = ["rust"]
rust = ["dep:tree-sitter-rust"]
php = ["dep:tree-sitter-php"]
javascript = ["dep:tree-sitter-javascript"]
python = ["dep:tree-sitter-python"]
